--- a/TKK_Application/MainForm.resx
+++ b/TKK_Application/MainForm.resx
@@ -133,7 +133,7 @@
         b24uQkRhcS5EZXZpY2VTdGF0ZVN0cmVhbWVyBQAAAAxEZXZpY2VOdW1iZXILRGVzY3JpcHRpb24KRGV2
         aWNlTW9kZQtNb2R1bGVJbmRleAlQcm9kdWN0SUQAAgAABAgICBlBdXRvbWF0aW9uLkJEYXEuUHJvZHVj
         dElkAgAAAAIAAAD/////CgEAAAAAAAAABf3///8ZQXV0b21hdGlvbi5CRGFxLlByb2R1Y3RJZAEAAAAH
-        dmFsdWVfXwAIAgAAAAASsSIL
+        dmFsdWVfXwAIAgAAAHgjmiIL
 </value>
   </data>
   <metadata name="instantDiCtrl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -146,7 +146,16 @@
         b24uQkRhcS5EZXZpY2VTdGF0ZVN0cmVhbWVyBQAAAAxEZXZpY2VOdW1iZXILRGVzY3JpcHRpb24KRGV2
         aWNlTW9kZQtNb2R1bGVJbmRleAlQcm9kdWN0SUQAAgAABAgICBlBdXRvbWF0aW9uLkJEYXEuUHJvZHVj
         dElkAgAAAAIAAAD/////CgEAAAAAAAAABf3///8ZQXV0b21hdGlvbi5CRGFxLlByb2R1Y3RJZAEAAAAH
-        dmFsdWVfXwAIAgAAAAAjsSIL
+        dmFsdWVfXwAIAgAAAOhSmiIL
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>552, 17</value>
+  </metadata>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>668, 17</value>
+  </metadata>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>755, 17</value>
+  </metadata>
 </root>
