--- a/TKK_Application/Properties/Resources.resx
+++ b/TKK_Application/Properties/Resources.resx
@@ -136,11 +136,17 @@
   <data name="green_dot1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\green_dot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="if_Control_Panel_51386" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Control Panel_51386.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="molumen_red_round_error_warning_icon_2400px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\molumen-red-round-error-warning-icon-2400px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ProcessLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ProcessLog.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1250</value>
   </data>
   <data name="red_dot" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\yast-red-dot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
